tests/ui/not-repeatable.stderr
error[E0599]: the method `quote_into_iter` exists for struct `Ipv4Addr`, but its trait bounds were not satisfied
 --> tests/ui/not-repeatable.rs:7:13
  |
3 | struct Ipv4Addr;
  | --------------- doesn't satisfy 7 bounds
...
7 |     let _ = quote! { #(#ip)* };
  |             ^^^^^^^^^^^^^^^^^^ method cannot be called on `Ipv4Addr` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Ipv4Addr: Iterator`
          which is required by `Ipv4Addr: ext::RepIteratorExt`
          `&Ipv4Addr: Iterator`
          which is required by `&Ipv4Addr: ext::RepIteratorExt`
          `<Ipv4Addr as FnOnce<(&mut proc_macro2::TokenStream,)>>::Output = ()`
          which is required by `Ipv4Addr: ext::RepFnExt`
          `Ipv4Addr: Fn<(&mut proc_macro2::TokenStream,)>`
          which is required by `Ipv4Addr: ext::RepFnExt`
          `Ipv4Addr: ToTokens`
          which is required by `Ipv4Addr: ext::RepToTokensExt`
          `&mut Ipv4Addr: Iterator`
          which is required by `&mut Ipv4Addr: ext::RepIteratorExt`
note: the traits `Iterator` and `ToTokens` must be implemented
 --> $RUST/core/src/iter/traits/iterator.rs
  |
  | pub trait Iterator {
  | ^^^^^^^^^^^^^^^^^^
  |
 ::: src/to_tokens.rs
  |
  | pub trait ToTokens {
  | ^^^^^^^^^^^^^^^^^^
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following traits define an item `quote_into_iter`, perhaps you need to implement one of them:
          candidate #1: `ext::RepAsIteratorExt`
          candidate #2: `ext::RepFnExt`
          candidate #3: `ext::RepIteratorExt`
          candidate #4: `ext::RepToTokensExt`
  = note: this error originates in the macro `$crate::quote_bind_into_iter` which comes from the expansion of the macro `quote` (in Nightly builds, run with -Z macro-backtrace for more info)
